--- a/dkshdf.html
+++ b/dkshdf.html
@@ -33,7 +33,8 @@
         </div>
     </header>
 
-    <!-- Main Content -->
+
+    <!-- belajar git hub -->
     <main class="container mx-auto mt-6">
         <!-- Featured Movie -->
         <section class="relative mb-8">
